force-app/main/default/objects/media__c/media__c.object-meta.xml
<CustomObject>
    <description>This contains the library media data or fields</description>
    <label>media</label>
    <nameField>
        <label>Inventory</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>medias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>