force-app/main/default/objects/media__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <description>This field consist of the media description</description>
    <label>description</label>
    <type>TextArea</type>
</CustomField>