force-app/main/default/objects/media__c/fields/Total_Qunatity__c.field-meta.xml
<CustomField>
    <fullName>Total_Qunatity__c</fullName>
    <description>This is for the input of quantity of medias</description>
    <inlineHelpText>The quantity field</inlineHelpText>
    <label>Total Qunatity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>